<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menu_level"
        android:orderInCategory="1"
        android:title="@string/level"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/level1"
                android:orderInCategory="1"
                android:title="@string/level1"/>
            <item
                android:id="@+id/level2"
                android:orderInCategory="2"
                android:title="@string/level2"/>
            <item
                android:id="@+id/level3"
                android:orderInCategory="3"
                android:title="@string/level3"/>


        </menu>
    </item>
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="2"
        android:title="@string/exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_msg"
        android:orderInCategory="3"
        android:title="@string/about_msg"
        app:showAsAction="never" />

</menu>